New style BCEL code